Bug 6048 - gold segfaults when used with g++ 2.95.3
Summary: gold segfaults when used with g++ 2.95.3
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gold (show other bugs)
Version: 2.19
: P3 normal
Target Milestone: ---
Assignee: Ian Lance Taylor
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-08 11:43 UTC by Roland Baumann
Modified: 2008-07-24 21:25 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Baumann 2008-04-08 11:43:08 UTC
When I use gold to link a gcc 2.95.3 object file it crashes. To reproduce,
compile a simple C++ program with g++ 2.95.3 and use gold for linking. The
following hello world will do:

#include <iostream>

int main() {
  std::cout << "Hello World" << std::endl;
}
Comment 1 Ian Lance Taylor 2008-07-24 21:25:25 UTC
Thanks for the bug report.  I just committed a patch which fixes the problem.

	* ehframe.cc (Eh_frame::add_ehframe_input_section): Check whether
	this->eh_frame_hdr_ is NULL before using it.