	PR 6048 	* ehframe.cc (Eh_frame::add_ehframe_input_section): Check whether 	this->eh_frame_hdr_ is NULL before using it.